src/snapshots/nixfmt_rs__ir_format_tests__param_trailing_comment_last_attr.snap
---
source: src/ir_format_tests.rs
description: "{ a, # c\n b ? 1, # d\n}: a"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m{[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardline
        [0;93;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1ma,[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardspace
        [0;93;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m TrailingComment [0;97;1m"[0m[0;94;1m# c[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardline
        [0;93;1m,[0m Group RegularG
            [0;35m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mb[0m[0;97;1m"[0m
            [0;35m,[0m Spacing Hardspace
            [0;35m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m?[0m[0;97;1m"[0m
            [0;35m,[0m Group RegularG
                [0;36m[[0m Spacing Space
                [0;36m,[0m Text [0;92;1m3[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m1[0m[0;97;1m"[0m
                [0;36m][0m
            [0;35m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m,[0m[0;97;1m"[0m
            [0;35m,[0m Spacing Hardspace
            [0;35m,[0m Text [0;92;1m1[0m [0;92;1m0[0m TrailingComment [0;97;1m"[0m[0;94;1m# d[0m[0;97;1m"[0m
            [0;35m][0m
        [0;93;1m,[0m Spacing Hardline
        [0;93;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m}[0m[0;97;1m"[0m
        [0;93;1m][0m
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m:[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1ma[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
