src/snapshots/nixfmt_rs__ir_format_tests__paren_absorb_rhs.snap
---
source: src/ir_format_tests.rs
description: "{ x = (a b); }"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m{[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mx[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardspace
        [0;93;1m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m=[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Hardspace
        [0;93;1m,[0m Group Priority
            [0;35m[[0m Text [0;92;1m4[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m([0m[0;97;1m"[0m
            [0;35m,[0m Spacing Break
            [0;35m,[0m Group RegularG
                [0;36m[[0m Text [0;92;1m5[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1ma[0m[0;97;1m"[0m
                [0;36m,[0m Spacing Hardspace
                [0;36m,[0m Group RegularG
                    [0;33m[[0m Text [0;92;1m6[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mb[0m[0;97;1m"[0m [0;33m][0m
                [0;36m][0m
            [0;35m,[0m Spacing Break
            [0;35m,[0m Text [0;92;1m4[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m)[0m[0;97;1m"[0m
            [0;35m][0m
        [0;93;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m;[0m[0;97;1m"[0m
        [0;93;1m][0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m}[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
